--- a/frontend/src/styles/LogoutButton.css
+++ b/frontend/src/styles/LogoutButton.css
@@ -1,9 +1,10 @@
 .Btn {
+  margin-left: 10px;
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  width: 35px;
-  height: 35px;
+  width: 26px;
+  height: 26px;
   border: none;
   border-radius: 50%;
   cursor: pointer;
