--- a/frontend/src/styles/general.css
+++ b/frontend/src/styles/general.css
@@ -1,1 +1,8 @@
 /* Already being imported. Any needed general style can be added here. */
+.underline {
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+  right: 0;
+  height: 2px;
+}
