Introduced content switching logic for Assistant domain, based on selectedTab state of AssistantContext. Complete assistant creation page. Updated SharedImage and SharedConversation's names for themes.

--- a/frontend/src/styles/general.css
+++ b/frontend/src/styles/general.css
@@ -1,4 +1,8 @@
 /* Already being imported. Any needed general style can be added here. */
+body {
+  height: 100%;
+}
+
 .underline {
   position: absolute;
   bottom: -1px;
