Adjusted height of Layout and children. Implemented files and file details in 'storage' tab in Assistant domain (wip).

--- a/frontend/src/styles/general.css
+++ b/frontend/src/styles/general.css
@@ -1,6 +1,8 @@
 /* Already being imported. Any needed general style can be added here. */
-body {
+html, body, #root {
   height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .underline {
